<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TaskSelectorView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:hapticFeedbackEnabled="true"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/patientheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:text="@string/patient_data"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/bclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/patientheader"
        android:layout_below="@id/patientheader"
        android:layout_marginRight="10dp"
        android:paddingRight="5dp"
        android:src="@drawable/erase"
        android:text="@string/clear" />

    <ImageView
        android:id="@+id/bsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patientheader"
        android:layout_toLeftOf="@id/bclear"
        android:src="@drawable/save"
        android:text="@string/save" />

    <ScrollView
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bclear"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@drawable/scroll"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/lnmain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="6dp"
            android:weightSum="4" >

            <!--
                 <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/tvheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    
                    android:text="@string/patinet_info"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </TableRow>
            -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvfirstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:text="@string/fname"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etfirstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:paddingTop="4dp"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvlastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="4dp"
                    android:text="@string/lname"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etlastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:paddingTop="4dp"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/tvdob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:text="@string/dob"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etdob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/selectdate"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="4dp"
                    android:text="@string/ssno"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:paddingTop="4dp"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/tvphone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:text="@string/patient_phone"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etphone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:paddingTop="4dp"
                    android:scrollHorizontally="true"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvemail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="4dp"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etemail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"
                    android:paddingTop="4dp"
                    android:text=" "
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>